--- a/nova/resources/lang/en.json
+++ b/nova/resources/lang/en.json
@@ -42,8 +42,8 @@
     "Another user has updated this resource since this page was loaded. Please refresh the page and try again.": "Another user has updated this resource since this page was loaded. Please refresh the page and try again.",
     "Are you sure you want to delete this file?": "Are you sure you want to delete this file?",
     "Are you sure you want to run this action?": "Are you sure you want to run this action?",
-    "Attach": "Attach",
-    "Attach & Attach Another": "Attach & Attach Another",
+    "Attach": "Add",
+    "Attach & Attach Another": "Add & Add Another",
     "Cancel": "Cancel",
     "Choose": "Choose",
     "Choose File": "Choose File",
@@ -55,7 +55,7 @@
     "Create & Add Another": "Create & Add Another",
     "Delete File": "Delete File",
     "Edit": "Edit",
-    "Edit Attached": "Edit Attached",
+    "Edit Attached": "Edit Add",
     "Go Home": "Go Home",
     "Hold Up!": "Hold Up!",
     "Lens": "Lens",
@@ -382,7 +382,7 @@
     "Key": "Key",
     "Value": "Value",
     "Add row": "Add row",
-    "Attach :resource": "Attach :resource",
+    "Attach :resource": "Add :resource",
     "Create :resource": "Create :resource",
     "Choose :resource": "Choose :resource",
     "New :resource": "New :resource",
